# django-tasks-google

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  verify.yml
django_tasks_google/: admin.py  auth.py  backends.py  base.py  executor.py  forms.py  models.py  scheduler.py  tasks.py  urls.py  views.py
django_tasks_google/management/commands/: execute_task.py  sync_scheduled_tasks.py
django_tasks_google/migrations/: 0001_initial.py  0002_update_models_to_current_schema.py  0003_taskexecution_max_attempts.py
tests/: fake_tasks.py  settings.py  test_admin.py  test_auth.py  test_backends.py  test_commands.py  test_executor.py  test_forms.py  test_scheduler.py  test_urls.py  test_views.py
