[project]
name = "django-tasks-google"
version = "0.2.0"
description = "Django's Task Framework backends for: Cloud Tasks, Cloud Scheduler, and Cloud Run Jobs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachecontrol>=0.14.0",
    "django>=6.0.0",
    "google-cloud-run>=0.1.0",
    "google-cloud-scheduler>=2.0.0",
    "google-cloud-tasks>=2.0.0",
    "requests>=2.0.0",
]
license = "MIT"
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "django-stubs>=6.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
